# cc

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
src/cc/: __init__.py  codegen.py  lexer.py  parser.py  tacky.py
tests/: test_lexer.py  test_parser.py  test_tacky.py
